; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmlstring.c_xmlStrdup.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmlstring.c_xmlStrdup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64* @xmlStrdup(i64* %0) #0 {
  %2 = alloca i64*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  %5 = load i64*, i64** %3, align 8
  store i64* %5, i64** %4, align 8
  %6 = load i64*, i64** %3, align 8
  %7 = icmp eq i64* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i64* null, i64** %2, align 8
  br label %27

9:                                                ; preds = %1
  br label %10

10:                                               ; preds = %14, %9
  %11 = load i64*, i64** %4, align 8
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i64*, i64** %4, align 8
  %16 = getelementptr inbounds i64, i64* %15, i32 1
  store i64* %16, i64** %4, align 8
  br label %10

17:                                               ; preds = %10
  %18 = load i64*, i64** %3, align 8
  %19 = load i64*, i64** %4, align 8
  %20 = load i64*, i64** %3, align 8
  %21 = ptrtoint i64* %19 to i64
  %22 = ptrtoint i64* %20 to i64
  %23 = sub i64 %21, %22
  %24 = sdiv exact i64 %23, 8
  %25 = trunc i64 %24 to i32
  %26 = call i64* @xmlStrndup(i64* %18, i32 %25)
  store i64* %26, i64** %2, align 8
  br label %27

27:                                               ; preds = %17, %8
  %28 = load i64*, i64** %2, align 8
  ret i64* %28
}

declare dso_local i64* @xmlStrndup(i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
